Improve generics for plate code